Refactor ui car revision methods